--- a/src/components/displaycategories/menu.css
+++ b/src/components/displaycategories/menu.css
@@ -6,7 +6,6 @@
   background: black;
   text-align: left;
   padding-top: 2rem;
-  padding-left: 2.5rem;
   border: 1px solid grey;
   min-width: 250px;
 }
@@ -21,8 +20,11 @@
   transition: transform 0.1s ease-in-out;
 }
 
+.menu-list {
+  margin: 10px 0px;
+}
 .menu-link {
-  margin: 15px 5px;
+  margin: 15px 15px;
   cursor: pointer;
   font-size: 20px;
 }
