--- a/src/components/prompts/prompts.css
+++ b/src/components/prompts/prompts.css
@@ -38,6 +38,7 @@
 }
 
 .prompts h3 {
+  width: 80%;
   margin-bottom: 5%;
   padding: 0;
   text-align: center;
@@ -46,6 +47,7 @@
 .wrapperPrompts a {
   width: 100%;
   height: 10vh;
+  padding-top: 20px;
   text-align: center;
 }
 
