--- a/src/components/deck/deck.css
+++ b/src/components/deck/deck.css
@@ -55,27 +55,26 @@
 .deck-label {
   width: 100%;
   text-align: center;
-  font-size: 30px;
   padding: 20px;
 }
 
-/* Mobile portrait mode */
-@media only screen and (max-width: 415px) {
-  .deck-label {
-    padding: 0;
-    margin-top: 50px;
-  }
+h1 {
+  font-size: 54px;
 }
 
+
 /* Mobile Landscape Screen Sizes  */
-@media only screen and (min-width: 480px) {
+@media only screen and (max-width: 480px) {
   .deck-label {
-    font-size: 50px;
+    font-size: 36px;
+  }
+  h3{
+    font-size: 14px;
   }
 }
 /* Desktop screen Sizes  */
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
   .deck-label {
-    font-size: 60px;
+    font-size: 54px;
   }
-}
+} */
