--- a/src/components/prompts/prompts.css
+++ b/src/components/prompts/prompts.css
@@ -72,3 +72,14 @@
   } */
 
 /* Mobile Landscape Screen Sizes */
+
+
+@media only screen and (max-width: 480px) {
+  .wrapper-prompts-title{
+    font-size: 36px;
+  }
+
+  h3{
+    font-size: 14px;
+  }
+}
