--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ body {
 
 .exposition-label {
   max-width: 700px;
+  width: 75%;
   margin: auto;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
