--- a/src/components/displaycategories/displaycategories.css
+++ b/src/components/displaycategories/displaycategories.css
@@ -76,12 +76,12 @@ p {
 .display-categories-title {
   text-align: center;
   width: 100%;
-  padding: 0;
 }
 
 .categories-explain {
-  padding: 33px;
-  text-align: center;
+  padding: 50px;
+  width:580px;
+  text-align: left;
 }
 
 .display-categories-wrapper .content-wrapper {
@@ -114,6 +114,9 @@ p {
 @media only screen and (max-width: 480px) {
   .display-categories-title{
     font-size: 36px;
+  }
+  .made-by-tbs{
+    font-size: 14px;
   }
 
 }
