--- a/src/components/deck/deck.css
+++ b/src/components/deck/deck.css
@@ -18,6 +18,7 @@
 
 .deckButtons {
   margin: 15px 5px;
+  margin-bottom:5%;
   display: flex;
   width: 100%;
   flex-direction: row;
@@ -36,6 +37,10 @@
   font-size: large;
   border: 3px solid #000;
   border-radius: 5px;
+  height:150%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .deckButtons div:hover {
