--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,6 @@ body {
   max-width: 700px;
   width: 75%;
   margin: auto;
-  padding-top: 10px;
-  padding-bottom: 20px;
+  padding-top:1%;
+  padding-bottom: 3%;
 }
