--- a/src/components/deck/deck.css
+++ b/src/components/deck/deck.css
@@ -68,6 +68,24 @@ h1 {
   font-size: 54px;
 }
 
+.hand-icon{
+
+  width: 75px;
+  height: 75px;
+  position: absolute;
+  margin: auto;
+}
+
+.wrapper-handicon{
+  display:flex;
+  justify-content: flex-end;
+  float:right;
+  /* margin-right:100%; */
+  width:100%;
+  padding: 5px;
+
+}
+
 
 /* Mobile Landscape Screen Sizes  */
 @media only screen and (max-width: 480px) {
@@ -77,7 +95,15 @@ h1 {
   h3{
     font-size: 14px;
   }
+  .hand-icon{
+
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    margin: auto;
+  }
 }
+
 /* Desktop screen Sizes  */
 /* @media only screen and (min-width: 768px) {
   .deck-label {
