--- a/src/components/displaycategories/displaycategories.css
+++ b/src/components/displaycategories/displaycategories.css
@@ -78,11 +78,9 @@ p {
 }
 
 .categories-explain {
-  padding: 50px;
-  width:580px;
-  text-align: left;
+  text-align: center;
   max-width: 80%;
-  padding-bottom: 50px;
+  padding-bottom: 2vh;
   margin: auto;
 }
 
