--- a/src/components/displaycategories/categoryCard.css
+++ b/src/components/displaycategories/categoryCard.css
@@ -14,7 +14,7 @@
 }
 
 .form {
-  background-color: #ca9598;
+  background-color: rgb(222,173,176,0.8);
 }
 
 .medium {
@@ -42,13 +42,17 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+ 
 }
 
 .title {
-  font-size: 23px;
+  font: 'value-bold';
+  font-size: 24px;
+  color: #C2A451;
 }
 
 .contents {
   font-size: 12px;
   padding: 7px 0;
+  color: #C2A451;
 }
